<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
  <string name="app_name" translatable="false">Open Link With</string>
  <string name="open_with">Open With…</string>

  <string name="use_a_different_app">Use a different app</string>
  <string name="activity_resolver_use_once">Just Once</string>
  <string name="activity_resolver_use_always">Always</string>
  <string name="which_view_application">Open with</string>
  <string name="which_view_application_named">Open with %1$s</string>
  <string name="title_preferred_apps">Preferred Apps</string>
  <string name="desc_preferred">Preferred applications to be used directly when the below links shared with this app.\n\nTap to remove a preferred app.</string>
  <string name="desc_preferred_empty">Preferred applications to be used directly when the below links shared with this app.\n\nYou can set preferred apps by sharing links with this app and then choosing “Always”</string>
  <string name="title_remove_preferred">Remove preferred?</string>
  <string name="message_remove_preferred"><![CDATA[
    Remove <strong>%1$s</strong> as the preferred app to load <strong>%2$s</strong> links with?<br><br><strong>Note:</strong> You can set a new preferred app to use next time you share <strong>%3$s</strong> link.
    ]]></string>
  <string name="error_invalid_url">The shared content did not have any valid URLs.</string>
  <string name="empty_resolver_activity">No other application found to handle the URL.</string>
  <string name="warning_open_link_with_name">Opening link with %s.</string>

  <string name="done">Done</string>

  <string name="pref_key_category_general" translatable="false">pref_category_general</string>
  <string name="pref_title_general">General</string>

  <string name="pref_key_about" translatable="false">pref_about</string>
  <string name="pref_title_about">About</string>
  <string name="pref_summary_about">See the tutorial again.</string>

  <string name="pref_key_preferred" translatable="false">pref_preferred</string>
  <string name="pref_title_preferred" translatable="false">@string/title_preferred_apps</string>
  <string name="pref_summary_preferred">Change preferred app settings.</string>

  <string name="browser_title">Browsers</string>
  <string name="browser_description">When a link shared with Open Link With, browsers are suggested in addition to the native apps.\n\nSelect below to modify this behavior.</string>
  <string name="browser_none">Hide browsers</string>
  <string name="browser_none_description">Never suggest browsers. Only native apps</string>
  <string name="browser_always_ask">Always ask</string>
  <string name="browser_always_ask_description">Include all browsers into suggested apps list</string>
  <string name="pref_key_browser" translatable="false">pref_browser</string>
  <string name="pref_title_browser" translatable="false">@string/browser_title</string>
  <string name="pref_summary_selected_browser">Only %s will be suggested</string>

  <string name="pref_key_usage_stats" translatable="false">pref_usage_stats</string>
  <string name="pref_title_usage_stats">Usage Stats</string>
  <string name="pref_summary_usage_stats">Improve the application sorting by giving access to Usage Stats.</string>

  <string name="pref_title_category_display">Display</string>

  <string name="pref_key_night_mode" translatable="false">pref_night_mode</string>
  <string name="pref_title_night_mode">Night Mode</string>
  <string name="pref_value_night_mode_off" translatable="false">off</string>
  <string name="pref_value_night_mode_on" translatable="false">on</string>
  <string name="pref_entry_night_mode_off">Off</string>
  <string name="pref_entry_night_mode_on">On</string>

  <string name="pref_key_category_clipboard" translatable="false">pref_category_clipboard</string>
  <string name="pref_title_category_clipboard">Link you copied</string>
  <string name="pref_key_clipboard" translatable="false">pref_clipboard</string>
  <string name="pref_title_clipboard">Click to open with…</string>

  <string name="pref_key_category_ask_for_rating" translatable="false">pref_category_ask_for_rating</string>
  <string name="pref_title_category_ask_for_rating">Like the app?</string>
  <string name="pref_key_ask_for_rating" translatable="false">pref_ask_for_rating</string>
  <string name="pref_title_ask_for_rating">If you enjoy Open Link With, would you mind taking a minute to rate it? Thanks for the support!</string>
  <string name="ask_for_rating_feedback">Feedback?</string>
  <string name="ask_for_rating_feedback_message">Would you like to give me more details?</string>
  <string name="ask_for_rating_feedback_email_subject">Feedback for Open Link With</string>
  <string name="ask_for_rating_rating_positive_button">Rate</string>
  <string name="ask_for_rating_rating_message">Please find “Rate this app” section in Play Store to give a rating.\n\nThanks for the support! 🎉</string>

  <string name="pref_title_category_advanced">Advanced</string>
  <string name="pref_key_category_advanced" translatable="false">pref_advanced</string>
  <string name="pref_key_features" translatable="false">pref_features</string>
  <string name="pref_title_features">App Features</string>
  <string name="pref_summary_features">Enable/Disable some feature</string>

  <string name="pref_key_feature_add_to_homescreen" translatable="false">pref_feature_add_to_homescreen</string>
  <string name="pref_title_feature_add_to_homescreen" translatable="false">@string/add_to_homescreen</string>
  <string name="pref_details_feature_add_to_homescreen"><![CDATA[
    Use <strong>Add to Home screen</strong> to quickly access your fav links with your fav apps.<br>
    <br>
    When enabled, this feature adds <strong>Add to Home screen</strong> to your system <strong>Share</strong> menu.<br>
    When selected you will have an option to add the shared link into your home screen.
  ]]></string>
  <string name="pref_key_feature_text_selection" translatable="false">pref_feature_text_selection</string>
  <string name="pref_title_feature_text_selection">Text Selection</string>
  <string name="pref_details_feature_text_selection"><![CDATA[
    When enabled, this feature adds <strong>Open With</strong> option into system level text selection pop-up.<br>
    <br>
    This feature can be useful in situations where sharing link is not feasible. When link is already visible in a text field, long click to select the text with the link and click <strong>Open With</strong>.
  ]]></string>
  <string name="pref_key_feature_direct_share" translatable="false">pref_feature_direct_share</string>
  <string name="pref_title_feature_direct_share">Direct Share</string>
  <string name="pref_details_feature_direct_share"><![CDATA[
    <strong>Direct Share</strong> is an Android feature where more relevant share targets are presented separately in the share menu.<br>
    <br>
    When enabled, <strong>Open Link With</strong> will be presented at top in the system share menu.<br>
    Also note that priority is set to low. If Android finds more relevant targets from other apps, Open Link With may not be offered.
  ]]></string>
  <string name="pref_key_feature_browser" translatable="false">pref_feature_browser</string>
  <string name="pref_title_feature_browser">Set as browser</string>
  <string name="pref_details_feature_browser"><![CDATA[
    <strong>Warning:</strong> Experimental feature!<br>
    <br>
    Makes Android recognize <strong>Open Link With</strong> as a <strong>Browser</strong>.<br>
    <br>
    When enabled, using share will not be necessary, just clicking links will trigger Open Link With and open the link
     in the native app. It will also un-shorten any shortened link.<br>
    <br>
    <strong>Be careful!</strong> Since Chrome (or your favorite browser) will not be default anymore, you may notice
     some behavior changes. As a benefit, your phone will be better with opening links in native apps.
  ]]></string>
  <string name="pref_key_feature_caller_app" translatable="false">pref_feature_caller_app</string>
  <string name="pref_title_feature_caller_app">Detect foreground apps</string>
  <string name="pref_details_feature_caller_app"><![CDATA[
    <strong>Warning:</strong> Experimental feature!<br>
    <br>
    When enabled, the foreground application (you shared the link from) will not be suggested.
    <br><br>
    Example: When sharing from browser, browser will not be suggested again. If no native app is found, you will see a warning message.
    <br>
    If not enabled, the foreground application will be suggested even though it is already open.
  ]]></string>
  <string name="feature_default_browser_message"><![CDATA[
    In the next window, please select <strong>Open Link With</strong>, and then select <strong>Always</strong>.
  ]]></string>

  <string name="pref_state_feature_enabled">Enabled</string>
  <string name="pref_state_feature_disabled">Disabled</string>

  <string name="pref_title_category_others">Others</string>

  <string name="pref_key_open_source" translatable="false">pref_open_source</string>
  <string name="pref_title_open_source">Open Source Licenses</string>
  <string name="pref_summary_open_source">See licenses of open source libraries.</string>

  <string name="pref_key_contact" translatable="false">pref_contact</string>
  <string name="pref_title_contact">Contact Me</string>
  <string name="pref_summary_contact">Send me an email before giving a 1 star.</string>

  <string name="pref_key_market" translatable="false">pref_market</string>
  <string name="pref_title_market">More apps by Said Tahsin Dane</string>
  <string name="pref_summary_market">Like it? Why not check out my other apps?</string>

  <string name="pref_key_version" translatable="false">pref_version</string>
  <string name="pref_title_version">Version</string>

  <string name="skip">Skip</string>
  <string name="cd_image_tutorial">Tutorial Image</string>

  <string name="title_tutorial_0">Welcome to Open Link With</string>
  <string name="title_tutorial_1">Did it ever happen to you?</string>
  <string name="title_tutorial_2">Share it!</string>
  <string name="title_tutorial_3" translatable="false">@string/title_preferred_apps</string>
  <string name="title_tutorial_4" translatable="false">@string/add_to_homescreen</string>
  <string name="title_tutorial_5">Usage Access</string>
  <string name="description_tutorial_0">I come to rescue you whenever you get stuck in browsers.</string>
  <string name="description_tutorial_1">You click a short-link and somehow you end up being stuck in web page instead of watching the video directly.</string>
  <string name="description_tutorial_2">Just share it with me and I will switch apps for you.</string>
  <string name="description_tutorial_3"><![CDATA[
    Select <strong>ALWAYS</strong> to tell me to open that link always with a specific app.
  ]]></string>
  <string name="description_tutorial_4"><![CDATA[
    <strong>Add to Home screen</strong> to quickly access your fav links with your fav apps.
  ]]></string>
  <string name="description_tutorial_5"><![CDATA[
    Give access to <strong>USAGE ACCESS</strong> and I will work better. I will detect the browser you are sharing from to act accordingly.
  ]]></string>
  <string name="usage_access_give_access">Give Access</string>
  <string name="error">Error</string>
  <string name="next">Next</string>
  <string name="error_usage_access_not_found">Usage Access Settings cannot be open.\n\nYou may access it by going into Settings -> Security</string>
  <string name="error_cannot_start_activity">Failed to open the link with selected app. Try again later.</string>

  <string name="add_to_homescreen">Add To Home screen</string>
  <string name="add">Add</string>
  <string name="cancel">Cancel</string>
  <string name="add_to_home_screen_dialog_hint">Shortcut title</string>
  <string name="add_to_home_screen_error">Device does not support shortcuts!</string>
</resources>
