<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_weight="3"
    android:gravity="center"
    android:paddingLeft="@dimen/keyline_1"
    android:paddingRight="@dimen/keyline_1"
    android:textColor="@android:color/white"
    android:textSize="28sp"
    android:textStyle="bold"
    tools:text="@string/title_tutorial_5"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/image"
      android:layout_width="@dimen/size_image_tutorial"
      android:layout_height="@dimen/size_image_tutorial"
      android:layout_gravity="center"
      android:contentDescription="@string/cd_image_tutorial"
      android:scaleType="centerInside"
      tools:src="@drawable/tutorial_1"/>
  </LinearLayout>

  <TextView
    android:id="@+id/description"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_weight="3"
    android:gravity="center"
    android:paddingRight="@dimen/keyline_1"
    android:paddingLeft="@dimen/keyline_1"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    tools:text="@string/description_tutorial_5"/>
</LinearLayout>
